--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" charset="utf-8">
     <meta name="description" content="Sujin Lee">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="{% static 'image/background/favicon.png' %}">
