edit social plugin

--- a/myblog/templates/blog/project_detail.html
+++ b/myblog/templates/blog/project_detail.html
@@ -60,18 +60,17 @@
         <div class="more-button">
           <i class="fa fa-share-alt"></i>
           <div class="container">
-            <a class="facebook customer share share-btn"
-            href="http://www.facebook.com/sharer.php?u=http://sujinlee.me/project/{{ project.slug }}"
-            title="Facebook share" target="_blank">
+            <a class="facebook share-btn" href="#"
+              title="Facebook share" target="_blank" onclick="fbshare()">
             <i class="fa fa-facebook"></i></a>
             <a class="twitter customer share share-btn"
-            href="http://twitter.com/share?url=http://sujinlee.me/project/{{ project.slug }}
-            &amp;text={{ project.title }} via @sujinleeme &amp;hashtags={{ project.category.title }}"
-            target="_blank" title="Twitter Share">
+              href="http://twitter.com/share?url=http://sujinlee.me/project/{{ project.slug }}
+              &amp;text={{ project.title }} via @sujinleeme &amp;hashtags={{ project.category.title }}"
+              target="_blank" title="Twitter Share">
             <i class="fa fa-twitter"></i></a>
             <a class="google_plus customer share share-btn"
-            href="https://plus.google.com/share?url=http://sujinlee.me/project/{{ project.slug }}"
-            target="_blank" title="Google Plus Share">
+              href="https://plus.google.com/share?url=http://sujinlee.me/project/{{ project.slug }}"
+              target="_blank" title="Google Plus Share">
             <i class="fa fa-google-plus"></i></a>
           </div>
         </div>
@@ -88,7 +87,7 @@
 <nav class="pagination_nav mdl-grid">
   <a href="{% url 'project_detail' slug=previous.slug %}">
     <div class="pagination_col mdl-cell mdl-cell--6-col"
-      style="background: {{project.category.color}}" rippleria>
+      style="background: {{ project.category.color }}" rippleria>
       {% if previous %}
       <i class="fa fa-angle-left fa-2x"></i>
       <span class="previous">Previous</span>
@@ -97,7 +96,7 @@
   {% endif %}
   </div>
   <div class="pagination_col mdl-cell mdl-cell--6-col"
-    style="background: {{project.category.color}}" rippleria>
+    style="background: {{ project.category.color }}" rippleria>
     {% if next %}
     <i class="fa fa-angle-right fa-2x"></i>
     <a href="{% url 'project_detail' slug=next.slug %}">
@@ -107,4 +106,21 @@
   </div>
 </nav>
 <div class="go-top"><i class="fa fa-angle-up"></i></div>
+<script>
+  // facebook share
+    function fbshare() {
+        FB.ui({
+                method: 'share_open_graph',
+                action_type: 'og.shares',
+                action_properties: JSON.stringify({
+                    object: {
+                        'og:url': 'http://sujinlee.me/project/{{ project.slug }}',
+                        'og:title': '{{ project.title }}',
+                        'og:description': '{{ project.summary }}',
+                        'og:image': 'http://sujinlee.me/{{ project.image.url }}'
+                    }
+                })
+            });
+    }
+</script>
 {% endblock %}
