--- a/myblog/templates/blog/post_detail.html
+++ b/myblog/templates/blog/post_detail.html
@@ -49,7 +49,7 @@
       <i class="heart-shaped fa fa-heart" style="display: none"></i>
       <i class="heart-shaped fa fa-heart-o" style="display: line-block"></i>
       {% endif %}
-    </button>
+      </button>
       <div class="like_count_blog" id="heart-counter">{{ post.likes }}</div>
     </div>
     <footer class="post-footer">
@@ -60,18 +60,17 @@
         <div class="more-button">
           <i class="fa fa-share-alt"></i>
           <div class="container">
-            <a class="facebook customer share share-btn"
-            href="http://www.facebook.com/sharer.php?u=http://sujinlee.me/blog/{{ post.slug }}"
-            title="Facebook share" target="_blank">
+            <a class="facebook share-btn" href="#"
+              title="Facebook share" target="_blank" onclick="fbshare()">
             <i class="fa fa-facebook"></i></a>
             <a class="twitter customer share share-btn"
-            href="http://twitter.com/share?url=http://sujinlee.me/blog/{{ post.slug }}
-            &amp;text={{ post.title }} via @sujinleeme &amp;hashtags={{ post.category.title }}"
-            target="_blank" title="Twitter Share">
+              href="http://twitter.com/share?url=http://sujinlee.me/blog/{{ post.slug }}
+              &amp;text={{ post.title }} via @sujinleeme &amp;hashtags={{ post.category.title }}"
+              target="_blank" title="Twitter Share">
             <i class="fa fa-twitter"></i></a>
             <a class="google_plus customer share share-btn"
-            href="https://plus.google.com/share?url=http://sujinlee.me/blog/{{ post.slug }}"
-            target="_blank" title="Google Plus Share">
+              href="https://plus.google.com/share?url=http://sujinlee.me/blog/{{ post.slug }}"
+              target="_blank" title="Google Plus Share">
             <i class="fa fa-google-plus"></i></a>
           </div>
         </div>
@@ -107,4 +106,21 @@
   </div>
 </nav>
 <div class="go-top"><i class="fa fa-angle-up"></i></div>
+<script>
+  // facebook share
+    function fbshare() {
+        FB.ui({
+                method: 'share_open_graph',
+                action_type: 'og.shares',
+                action_properties: JSON.stringify({
+                    object: {
+                        'og:url': 'http://sujinlee.me/blog/{{post.slug }}',
+                        'og:title': '{{ post.title }}',
+                        'og:description': '{{ post.summary }}',
+                        'og:image': 'http://sujinlee.me/{{ post.image.url }}'
+                    }
+                })
+            });
+    }
+</script>
 {% endblock %}
