edit social plugin

--- a/myblog/templates/blog/project_detail.html
+++ b/myblog/templates/blog/project_detail.html
@@ -61,7 +61,7 @@
           <i class="fa fa-share-alt"></i>
           <div class="container">
             <a class="facebook share-btn" href="#"
-              title="Facebook share" target="_blank" onclick="fbshare()">
+              target="_blank" onclick="fbshare()">
             <i class="fa fa-facebook"></i></a>
             <a class="twitter customer share share-btn"
               href="http://twitter.com/share?url=http://sujinlee.me/project/{{ project.slug }}
