edit social plugin

--- a/myblog/templates/blog/post_detail.html
+++ b/myblog/templates/blog/post_detail.html
@@ -10,7 +10,7 @@
 <meta property="og:title" content="{{ post.title }}" />
 <meta property="article:author" content="https://www.facebook.com/sujiniworld" />
 <meta property="og:description" content="{{ post.summary|truncatechars:230 }}" />
-<meta property="og:image"content="http://sujinlee.me/{{ post.image.url }}" />
+<meta property="og:image" content="http://sujinlee.me/{{ post.image.url }}" />
 <meta property="og:url" content="http://sujinlee.me/blog/{{post.slug }}" />
 {% endblock %}
 {% block content %}
@@ -54,8 +54,8 @@
     </div>
     <footer class="post-footer">
       <span class="post-comment">
-      <i class="fa fa-comment-o"></i>
-      <a href="{% url 'post_detail' slug=post.slug %}#disqus_thread"></a></span>
+      <a href="{% url 'post_detail' slug=post.slug %}#disqus_thread"><i class="fa fa-comment-o"></i></a>
+      </span>
       <div class="post-share">
         <div class="more-button">
           <i class="fa fa-share-alt"></i>
@@ -113,7 +113,7 @@
                 method: 'share_open_graph',
                 action_type: 'og.shares',
                 action_properties: JSON.stringify({
-                    object: {
+                    post: {
                         'og:url': 'http://sujinlee.me/blog/{{post.slug }}',
                         'og:title': '{{ post.title }}',
                         'og:description': '{{ post.summary }}',
@@ -124,3 +124,4 @@
     }
 </script>
 {% endblock %}
+ Highlights by 0
