--- a/myblog/templates/blog/project_detail.html
+++ b/myblog/templates/blog/project_detail.html
@@ -54,8 +54,8 @@
     </div>
     <footer class="post-footer">
       <span class="post-comment">
-      <a href="{% url 'project_detail' slug=project.slug %}#disqus_thread">
-      <i class="fa fa-comment-o"></i></a></span>
+      <i class="fa fa-comment-o"></i>
+      <a href="{% url 'project_detail' slug=project.slug %}#disqus_thread"></a></span>
       <div class="post-share">
         <div class="more-button">
           <i class="fa fa-share-alt"></i>
@@ -113,7 +113,7 @@
                 method: 'share_open_graph',
                 action_type: 'og.shares',
                 action_properties: JSON.stringify({
-                    post: {
+                    object: {
                         'og:url': 'http://sujinlee.me/project/{{ project.slug }}',
                         'og:title': '{{ project.title }}',
                         'og:description': '{{ project.summary }}',
