--- a/myblog/templates/blog/post_detail.html
+++ b/myblog/templates/blog/post_detail.html
@@ -113,7 +113,7 @@
                 method: 'share_open_graph',
                 action_type: 'og.shares',
                 action_properties: JSON.stringify({
-                    post: {
+                    object: {
                         'og:url': 'http://sujinlee.me/blog/{{post.slug }}',
                         'og:title': '{{ post.title }}',
                         'og:description': '{{ post.summary }}',
