--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -14,9 +14,8 @@
     <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-jp.css' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Montserrat+Alternates:400,700' rel='stylesheet' type='text/css'>
-    <link href="//storage.googleapis.com/code.getmdl.io/1.0.6/material.min.css" rel="stylesheet">
-    <link href="//cdn.rawgit.com/konpa/devicon/master/devicon.min.css" rel="stylesheet">
     <link href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css" rel="stylesheet">
+    <link href="{% static 'css/mdl-grid.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/text.css' %}" rel="stylesheet" type="text/css">
     <script>
@@ -83,8 +82,6 @@
       ga('create', 'UA-53782262-2', 'auto');
       ga('send', 'pageview');
     </script>
-    {% endblock %}
-    {% block jsblock2 %}
     {% endblock %}
   </body>
 </html>
