--- a/myrun/templates/marathon/event_list.html
+++ b/myrun/templates/marathon/event_list.html
@@ -101,11 +101,12 @@
     </section>
     </div>
     <div class="footer">
-      <a href="www.marathon.pe.kr/schedule_index.html">
+      <a href="http://www.marathon.pe.kr/schedule_index.html">
         <h4>마라톤 온라인
       </a>
       이 제공하는 2016년간 행사 데이터를 크롤링한 웹페이지 입니다.</br>
-      파이썬 웹 프레임워크 <a href="https://www.djangoproject.com/">Django</a>로 만들었습니다.</h4>
+      파이썬 웹 프레임워크 <a href="https://www.djangoproject.com/">Django</a>로 만들었습니다.
+      <a href="https://github.com/sujinleeme/official-website/tree/master/myrun">[github]</a></h4>
     </div>
   </body>
   <script src="{% static 'js/myrun.js' %}"></script>
